--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ section{
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url(img0.jpg);
+    background: url(assets/img0.jpg);
     background-size: cover;
     display: grid;
     grid-template-columns: repeat(1,1fr);
